[package]
name = "kvs"
version = "0.1.0"
authors = ["ccdle12 <chris.coverdale24@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
env_logger = "0.6.1"
serde = "1.0.93"
serde_json = "1.0.39"
stderrlog = "0.4.1"
structopt = "0.2.16"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
