[package]
name = "kvs"
version = "0.1.0"
authors = ["ccdle12 <chris.coverdale24@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
structopt = "0.2.16"
tempfile = "3.0.8"
walkdir = "2.2.8"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.93"
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
